--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,11 @@
 # Site settings
-title:
-email:
+title: rami-portfolio
+email: ramiTae@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+url: "https://ramitae.github.io" # the base hostname & protocol for your site
 
-twitter_username:
-github_username:
+github_username: RamiTae
 
 # Build settings
 markdown: kramdown
