--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,13 @@
 # Site settings
 title: rami-portfolio
-email: ramiTae@gmail.com
+email: ramiTae.dev@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "https://ramitae.github.io" # the base hostname & protocol for your site
+url: "https://ramitae.netlify.com" # the base hostname & protocol for your site
 
 github_username: RamiTae
+linkedIn_username: rami-tae
+blog_url: https://ram-t.tistory.com/
 
 # Build settings
 markdown: kramdown
